tyk/k8s/tyk-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: tyk-gateway
  name: tyk-gateway
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 8080
      nodePort:  32123
  selector:
    io.kompose.service: tyk-gateway
  type: NodePort
status:
  loadBalancer: {}
