tyk/k8s/tyk-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: tyk
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/tyk: "true"
  podSelector:
    matchLabels:
      io.kompose.network/tyk: "true"
